# danmaku-sender

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  README.txt  app_config.py  app_content.py  bili_api_client.py  bili_danmaku_utils.py  bili_monitor.py  bili_sender.py  config.py.example  config_manager.py  controller.py  credential_manager.py  gui.py  help_content.py  index.html  inno_setup.iss  log_utils.py  main.py  main_app.py  mkdocs.yml  monitor_tab.py  notification_utils.py  pyproject.toml  requirements.txt  run.py  sender_tab.py  shared_data.py  sitemap.xml  validator_tab.py  wbi_signer.py
.claude/: plan.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report_cn.yml  feature_request_cn.yml
.github/workflows/: build.yml  docs.yml  nightly.yml
assets/docs/: monitor.md  sender.md  validator.md
assets/qss/: style.qss
docs/: index.md
docs/guides/: editor.md  sender.md
docs/setup/: credentials.md
guides/editor/: index.html
guides/sender/: index.html
search/: search_index.json
setup/credentials/: index.html
src/danmaku_sender/: __main__.py  _version.py  main.py
src/danmaku_sender/api/: bili_api_client.py  wbi_signer.py  (+1 more)
tests/: conftest.py
tests/test_engines/: test_editor_session.py
tests/test_exceptions/: test_api_errors.py  test_exceptions.py
tests/test_models/: test_common.py  test_danmaku.py  test_editor_types.py  test_result.py  test_video.py
tests/test_services/: test_danmaku_validator.py
tests/test_state/: test_state.py
tests/test_utils/: test_account_manager.py  test_string_utils.py  test_time_utils.py
(+178 files in other folders)
